--- a/package.json
+++ b/package.json
@@ -35,4 +35,14 @@
     "@vercel/ncc": "^0.38.3",
     "vitest": "^1.6.0"
   }
+  {
+  "scripts": {
+    "build": "npm run build || echo \"no build script; skipping\"",
+    "test": "node --test tests",
+    "test:unit": "node --test tests/unit",
+    "test:integration": "node --test tests/integration",
+    "coverage": "npx c8 --reporter=lcov --reporter=text node --test tests"
+  }
+}
+
 }
