--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "node --test tests",
     "test:unit": "node --test tests/unit",
     "test:integration": "node --test tests/integration",
-    "coverage": "npx c8 --reporter=lcov --reporter=text node --test tests"
+    "coverage": "npx c8 --reporter=lcov --reporter=text-summary --reporter=json-summary node --test tests/unit tests/integration"
   },
   "repository": {
     "type": "git",
