--- a/.github/workflows/cicd-test-gated.yml
+++ b/.github/workflows/cicd-test-gated.yml
@@ -11,7 +11,6 @@ permissions:
   issues: write
 
 jobs:
-  # 1) Build (Matrix: Node 18 & 20)
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -35,7 +34,7 @@ jobs:
       - name: Build
         run: |
           echo "Building on Node ${{ matrix.node-version }}..."
-          npm run build --if-present || echo "No build script; skipping"
+          npm run build
 
       - name: Archive build
         run: zip -r build.zip . -x ".git/*" "node_modules/*"
@@ -46,7 +45,6 @@ jobs:
           name: build-${{ matrix.node-version }}
           path: build.zip
 
-  # 2) Unit tests (Matrix)
   test-unit:
     runs-on: ubuntu-latest
     needs: build
@@ -58,12 +56,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install deps
-        run: npm install
+      - run: npm install
       - name: Run unit tests (gate)
         run: npm run test:unit
 
-  # 3) Integration tests (Matrix)
   test-integration:
     runs-on: ubuntu-latest
     needs: test-unit
@@ -75,12 +71,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install deps
-        run: npm install
+      - run: npm install
       - name: Run integration tests (gate)
         run: npm run test:integration
 
-  # 4) Coverage (生成 + 上傳 + 輸出覆蓋率；對異常有保底)
   coverage:
     runs-on: ubuntu-latest
     needs: test-integration
@@ -93,23 +87,11 @@ jobs:
           node-version: 18
       - run: npm ci || npm install
 
-      - name: Generate coverage (do not fail pipeline)
+      - name: Generate coverage (continue on failure)
         run: |
           npm run coverage || echo "⚠️ Some tests failed; continuing to collect coverage..."
-          # 保底：如果沒有產生 json-summary，就寫入 0% 以避免後續讀檔失敗
-          if [ ! -f coverage/coverage-summary.json ]; then
-            mkdir -p coverage
-            cat > coverage/coverage-summary.json <<'JSON'
-            {
-              "total": {
-                "lines": {"pct": 0},
-                "statements": {"pct": 0},
-                "branches": {"pct": 0},
-                "functions": {"pct": 0}
-              }
-            }
-JSON
-          fi
+          # 若未產生 json-summary，用 Node 建 0% 檔案（避免找不到 coverage-summary.json）
+          node -e "const fs=require('fs');fs.mkdirSync('coverage',{recursive:true});if(!fs.existsSync('coverage/coverage-summary.json')){fs.writeFileSync('coverage/coverage-summary.json',JSON.stringify({total:{lines:{pct:0},statements:{pct:0},branches:{pct:0},functions:{pct:0}}}))}"
 
       - name: Extract coverage %
         id: extract
@@ -125,7 +107,6 @@ JSON
           name: coverage
           path: coverage/
 
-  # 5) Deploy to Staging (only if coverage >= 60)
   deploy-staging:
     runs-on: ubuntu-latest
     needs: coverage
@@ -145,7 +126,6 @@ JSON
             --notes "Staging release (tests & coverage passed)" \
             --repo "$GH_REPO"
 
-  # 6) Deploy to Production (需環境保護審核)
   deploy-production:
     runs-on: ubuntu-latest
     needs: deploy-staging
@@ -165,7 +145,6 @@ JSON
             --notes "Production release (approved)" \
             --repo "$GH_REPO"
 
-  # 7) Notify on failure（測試失敗自動開 Issue）
   notify-on-fail:
     if: ${{ failure() }}
     runs-on: ubuntu-latest
