--- a/.github/workflows/cicd-test-gated.yml
+++ b/.github/workflows/cicd-test-gated.yml
@@ -1,16 +1,29 @@
 name: CI/CD with Test Gates
 
 on:
-  workflow_dispatch:
   push:
     branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      run_prod:
+        description: "也部署到 production？(true/false)"
+        required: false
+        default: "false"
 
 permissions:
-  contents: write
+  contents: write       # 建 release 需要
   deployments: write
   issues: write
+  actions: read
+  checks: read
+
+# 同一分支避免同時多跑
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: false
 
 jobs:
+  # 1) 建置（Node 18/20 矩陣）
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -22,6 +35,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
       - name: Install dependencies (lockfile-safe)
         run: |
@@ -45,6 +59,7 @@ jobs:
           name: build-${{ matrix.node-version }}
           path: build.zip
 
+  # 2) 單元測試（矩陣）
   test-unit:
     runs-on: ubuntu-latest
     needs: build
@@ -56,10 +71,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
+          cache: 'npm'
+      - run: npm ci || npm install
       - name: Run unit tests (gate)
         run: npm run test:unit
 
+  # 3) 整合測試（矩陣）
   test-integration:
     runs-on: ubuntu-latest
     needs: test-unit
@@ -71,10 +88,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
+          cache: 'npm'
+      - run: npm ci || npm install
       - name: Run integration tests (gate)
         run: npm run test:integration
 
+  # 4) Coverage（輸出百分比，供 gate 使用）
   coverage:
     runs-on: ubuntu-latest
     needs: test-integration
@@ -85,19 +104,22 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: 'npm'
       - run: npm ci || npm install
 
-      - name: Generate coverage (continue on failure)
+      # 確保產生 json-summary；即使測試失敗也盡量輸出報告
+      - name: Generate coverage (json-summary + text-summary)
         run: |
-          npm run coverage || echo "⚠️ Some tests failed; continuing to collect coverage..."
-          # 若未產生 json-summary，用 Node 建 0% 檔案（避免找不到 coverage-summary.json）
-          node -e "const fs=require('fs');fs.mkdirSync('coverage',{recursive:true});if(!fs.existsSync('coverage/coverage-summary.json')){fs.writeFileSync('coverage/coverage-summary.json',JSON.stringify({total:{lines:{pct:0},statements:{pct:0},branches:{pct:0},functions:{pct:0}}}))}"
+          npm run coverage || true
+          npx c8 report --reporter=json-summary --reporter=text-summary || true
+          # 保底：若沒有 summary，寫入 0%
+          node -e "const fs=require('fs');fs.mkdirSync('coverage',{recursive:true});const p='coverage/coverage-summary.json';if(!fs.existsSync(p)){fs.writeFileSync(p,JSON.stringify({total:{lines:{pct:0}}}))}"
 
       - name: Extract coverage %
         id: extract
         shell: bash
         run: |
-          PCT=$(node -e "console.log(require('./coverage/coverage-summary.json').total.lines.pct ?? 0)")
+          PCT=$(node -e "try{console.log(require('./coverage/coverage-summary.json').total.lines.pct||0)}catch(e){console.log(0)}")
           echo "Coverage lines: ${PCT}%"
           echo "pct=${PCT}" >> "$GITHUB_OUTPUT"
 
@@ -107,29 +129,32 @@ jobs:
           name: coverage
           path: coverage/
 
+  # 5) 部署到 Staging（只在 main，且 coverage 達標才跑）
   deploy-staging:
     runs-on: ubuntu-latest
     needs: coverage
-    if: ${{ success() && needs.coverage.outputs.pct >= 60 }}
+    # 重要修正：把 coverage 輸出轉成數字比對，避免字串比較造成 skipped
+    if: ${{ github.ref == 'refs/heads/main' && fromJSON(format('{0}', needs.coverage.outputs.pct)) >= 60 }}
     environment: staging
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: build-18
+          name: build-18   # 如要改用 Node 20 的產物，改成 build-20
       - name: Release to Staging
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}   # gh 會優先讀 GH_TOKEN
           GH_REPO: ${{ github.repository }}
           TAG: staging-1.0.0+build-${{ github.run_number }}
         run: |
           gh release create "$TAG" build.zip \
-            --notes "Staging release (tests & coverage passed)" \
+            --notes "Staging release (tests ok, coverage=${{ needs.coverage.outputs.pct }}%)" \
             --repo "$GH_REPO"
 
+  # 6) 部署到 Production（需手動觸發，配合 Environment Reviewer）
   deploy-production:
     runs-on: ubuntu-latest
     needs: deploy-staging
-    if: ${{ success() }}
+    if: ${{ github.event_name == 'workflow_dispatch' && inputs.run_prod == 'true' && success() }}
     environment: production
     steps:
       - uses: actions/download-artifact@v4
@@ -142,19 +167,20 @@ jobs:
           TAG: prod-1.0.0+build-${{ github.run_number }}
         run: |
           gh release create "$TAG" build.zip \
-            --notes "Production release (approved)" \
+            --notes "Production release (approved). Coverage=${{ needs.coverage.outputs.pct }}%" \
             --repo "$GH_REPO"
 
+  # 7) 測試/coverage 失敗時自動開 Issue（涵蓋更多前置 jobs）
   notify-on-fail:
     if: ${{ failure() }}
     runs-on: ubuntu-latest
-    needs: [test-unit, test-integration]
+    needs: [build, test-unit, test-integration, coverage]
     steps:
-      - name: Create issue on test failure
+      - name: Create issue on CI failure
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh issue create \
             --repo "${{ github.repository }}" \
-            --title "❌ CI tests failed in run #${{ github.run_number }}" \
-            --body "One or more tests failed. Logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+            --title "❌ CI failed in run #${{ github.run_number }}" \
+            --body "請查看 Actions 日誌與 coverage 結果：${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
