--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "test": "node --test tests",
     "test:unit": "node --test tests/unit",
     "test:integration": "node --test tests/integration",
-    "coverage": "npx c8 --reporter=lcov --reporter=text-summary --reporter=json-summary node --test tests/unit tests/integration"
+    "coverage": "c8 --reporter=lcov --reporter=text-summary --reporter=json-summary node --test tests/unit tests/integration"
   }
 }
